[workspace]
members = ["radiant", "dmx", "headless", "ui", "radlib"]
resolver = "3"


[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive"] }
crossbeam-channel = "0.5.15"
dmx = { path = "./dmx", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
eyre = "0.6.12"
gpui = { git = "https://github.com/zed-industries/zed", rev = "9046091" }
log = "0.4.27"
radlib = { path = "./radlib" }
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = "5.0.0"
spin_sleep = "1.3.2"
thiserror = "2.0.12"
ui = { path = "./ui" }
uuid = { version = "1.17.0", features = ["v4"] }
