[package]
name = "zv-radiant"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2.2" }
gpui-component = "0.5.0"
core-text = "=21.0.0"

log = "0.4.29"
pretty_env_logger = "0.5.0"

tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
zeevonk = { version = "0.2.0", features = ["client", "server"] }
