[workspace]
members = ["rd", "rd-engine", "rd-headless", "rd-ui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
rd = { path = "rd" }
rd-ui = { path = "rd-ui" }
rd-engine = { path = "rd-engine" }

gpui = { git = "https://github.com/zed-industries/zed.git" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", features = ["font-kit"] }

anyhow = "1.0.100"

log = "0.4.29"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
