[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
crossbeam-channel.workspace = true
dmx.workspace = true
eyre.workspace = true
gpui.workspace = true
log.workspace = true
radiant.workspace = true
serde.workspace = true
simple_logger.workspace = true
ui.workspace = true
