[package]
name = "flow"
version.workspace = true
edition.workspace = true

[features]
derive = ["dep:flow_derive"]
serde = ["dep:serde"]

[dependencies]
# crates
ui.workspace = true

# ui
gpui.workspace = true

# error handling
thiserror.workspace = true

# feature = "serde"
serde = { workspace = true, optional = true }

# feature = "derive"
flow_derive = { workspace = true, optional = true }
