[package]
name = "gdtf"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.6.0"
zip = { version = "0.6.6", default-features = false }
regex = "1.5"
once_cell = "1.19.0"
serde-inline-default = "0.2.0"
