[package]
name = "radiant"
version.workspace = true
edition.workspace = true

[dependencies]
gpui.workspace = true
log.workspace = true

pretty_env_logger = "0.5.0"

tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
zeevonk = { version = "0.2.0", features = ["client", "server"] }
