[package]
name = "radiant"
version.workspace = true
edition.workspace = true

[dependencies]
rui.workspace = true

gpui.workspace = true
core-text.workspace = true
log.workspace = true

pretty_env_logger = "0.5.0"

zeevonk = { git = "https://github.com/BaukeWestendorp/zeevonk.git", branch = "dev" }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
theymx = "0.1.1"
clap = { version = "4.5.56", features = ["derive"] }
