[package]
name = "radlib"
version.workspace = true
edition.workspace = true

[dependencies]
arrayvec = "0.7.6"
crossbeam-channel.workspace = true
dmx.workspace = true
eyre.workspace = true
gdtf = "0.2.0"
log.workspace = true
serde.workspace = true
serde_yaml = "0.9.34"
socket2 = { version = "0.6.0", features = ["all"] }
spin_sleep.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
thiserror.workspace = true
uuid.workspace=true
