[package]
name = "rd-core"
version.workspace = true
edition.workspace = true

[dependencies]
palette = "0.7.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spin_sleep = "1.3.3"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
zeevonk = { git = "https://github.com/BaukeWestendorp/zeevonk.git", branch = "dev" }
