[package]
name = "rd-core"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
mlua = { version = "0.11.6", features = ["lua54", "macros", "send", "serde"] }
palette = "0.7.6"
serde.workspace = true
serde_json.workspace = true
spin_sleep = "1.3.3"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4"] }
zeevonk = { path = "../../zeevonk/crates/zeevonk" }
