[package]
name = "rd-engine"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
midir = "0.10.0"
midly = { version = "0.5.3", default-features = false, features = ["std"] }
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.23.1", features = ["serde"] }
zeevonk = { git = "https://github.com/BaukeWestendorp/zeevonk.git" }
