[package]
name = "rd-engine"
version.workspace = true
edition.workspace = true

[features]
rd-ui = ["dep:rd-ui"]

[dependencies]
anyhow.workspace = true

arc-swap = "1.7.1"

serde.workspace = true
serde-big-array = "0.5.1"
serde_path_to_error = "0.1.20"

log.workspace = true

flume.workspace = true

serde_json = "1.0.150"
quick-xml = { version = "0.39.2", features = ["serialize"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }

spin_sleep = "1.3.3"
thread-priority = "3.0.0"

midly = { version = "0.5.3", default-features = false, features = ["std"] }
midir = "0.10.0"

glam = "0.33.0"
arrayvec = "0.7.6"
socket2 = "0.6.4"
thiserror = "2.0.18"
libftd2xx = "0.33.1"

# feature = "rd-ui"
rd-ui = { workspace = true, optional = true }

[dev-dependencies]
pretty_env_logger = "0.5.0"
