[package]
name = "rd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "radiant"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.56", features = ["derive"] }
gpui.workspace = true
log.workspace = true
pretty_env_logger = "0.5.0"
rd-ui.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spin_sleep = "1.3.3"
mlua = { version = "0.11.6", features = ["lua54", "macros", "send", "serde"] }
uuid = { version = "1.20.0", features = ["v4"] }
zeevonk = { path = "../../zeevonk/crates/zeevonk" }
derive_more = { version = "2.1.1", features = ["full"] }
