[package]
name = "rd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "radiant"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.56", features = ["derive"] }
gpui.workspace = true
log.workspace = true
pretty_env_logger = "0.5.0"
rd-ui.workspace = true
rd-engine.workspace = true
