[package]
name = "backstage"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
doctest = false

[dependencies]
dmx.workspace = true
gdtf.workspace = true
gdtf_share.workspace = true

anyhow.workspace = true
dotenv.workspace = true
log.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
itertools.workspace = true
lazy_static.workspace = true

artnet_protocol = "0.4.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
