[package]
name = "dmx"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
serde = ["dep:serde", "dep:serde-big-array"]

[dependencies]
thiserror.workspace = true

# feature = "serde"
serde = { workspace = true, optional = true }
serde-big-array = { version = "0.5.1", optional = true }

[dev-dependencies]
serde_json = { version = "1.0.140" }
