[package]
name = "flow"
version.workspace = true
edition.workspace = true

[dependencies]
slotmap.workspace = true
thiserror.workspace = true
serde.workspace = true

gpui = { workspace = true, optional = true }
ui = { workspace = true, optional = true }
flow_derive = { workspace = true, optional = true }

[features]
gpui = ["dep:gpui", "dep:ui", "flow_derive/gpui"]
derive = ["dep:flow_derive"]
