[package]
name = "flow"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
derive = ["dep:flow_derive"]
serde = ["dep:serde"]

[dependencies]
ui.workspace = true

gpui.workspace = true
thiserror.workspace = true

# feature = "derive"
flow_derive = { path = "flow_derive", optional = true }

# feature = "serde"
serde = { workspace = true, optional = true }
