[package]
name = "flow_macros"
version.workspace = true
edition.workspace = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.87", features = ["full"] }
proc-macro2 = "1.0.89"
darling = "0.20.10"

[dev-dependencies]
flow = { workspace = true, features = ["macros"] }

gpui.workspace = true
geo.workspace = true

[lib]
proc-macro = true

[features]
default = []
gpui = ["flow/gpui"]
serde = ["flow/serde"]
