[package]
name = "radiant"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dmx = { workspace = true, features = ["serde"] }
flow = { workspace = true, features = ["derive", "serde"] }
sacn.workspace = true
ui.workspace = true

anyhow.workspace = true
dirs.workspace = true
gpui.workspace = true
log.workspace = true
serde.workspace = true

clap = { version = "4.5.36", features = ["derive"] }
env_logger = "0.11.8"
gdtf = "0.2.0"
ron = "0.10"
