[package]
name = "radiant2"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmx.workspace = true

anyhow.workspace = true
env_logger.workspace = true
gpui.workspace = true
log.workspace = true
lazy_static.workspace = true
smallvec.workspace = true
serde_json.workspace = true
serde.workspace = true

assets = { package = "assets", git = "https://github.com/zed-industries/zed" }
artnet_protocol = "0.4.2"
