[package]
name = "radiant2"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
dmx.workspace = true
ui.workspace = true
theme.workspace = true
backstage.workspace = true

anyhow.workspace = true
env_logger.workspace = true
gpui.workspace = true
log.workspace = true
lazy_static.workspace = true
smallvec.workspace = true
serde_json.workspace = true
serde.workspace = true
futures-lite.workspace = true

assets = { package = "assets", git = "https://github.com/zed-industries/zed" }
artnet_protocol = "0.4.2"
rust-embed = "8.3.0"
clap = { version = "4.5.4", features = ["derive"] }
