[package]
name = "sacn"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# errors
thiserror.workspace = true

# uuid
uuid = { version = "1.16.0", features = ["v4"] }

# network
socket2 = { version = "0.5.9", features = ["all"] }

# timing
spin_sleep = "1.3.1"
arrayvec = "0.7.6"

[dev-dependencies]
ntest = "0.9.3"
serial_test = "*"
