[package]
name = "show"
version.workspace = true
edition.workspace = true

[dependencies]
# crates
flow = { workspace = true, features = ["serde", "derive"] }
sacn.workspace = true
ui.workspace = true

# serialization
serde.workspace = true
serde_json = "1.0"

# ui
gpui.workspace = true

[lints]
workspace = true
