[package]
name = "show"
version.workspace = true
edition.workspace = true

[dependencies]
dmx = { workspace = true, features = ["serde"] }
flow = { workspace = true, features = ["serde", "derive"] }
sacn.workspace = true
ui.workspace = true

anyhow.workspace = true
dirs.workspace = true
gpui.workspace = true
log.workspace = true
serde.workspace = true

gdtf = { git = "https://github.com/matteolutz/gdtf-rs" }
ron = "0.10"

[lints]
workspace = true
